avoid word break in http method

--- a/src/components/openapi/HTTPMethod.module.css
+++ b/src/components/openapi/HTTPMethod.module.css
@@ -9,6 +9,7 @@
   min-width: 80px;
   text-align: center;
     font-family: var(--ifm-font-family-base);
+    flex-shrink: 0;
 }
 
 p .method, li .method {
